Try to fix sorting ontrol layout problem

--- a/material/static/material/sass/materialize.frontend.scss
+++ b/material/static/material/sass/materialize.frontend.scss
@@ -374,7 +374,7 @@ table[data-form-control="datatable"] {
             &.sorting_asc_disabled:last-child:after,
             &.sorting_desc_disabled:last-child:before,
             &.sorting_desc_disabled:last-child:after {
-                padding-right: 20px;
+                // padding-right: 20px;
             }
 
             &.sorting:before,
